--- a/index1.html
+++ b/index1.html
@@ -48,7 +48,7 @@
 
   <div class="row work-row"> <!-- even -->
     <div class="small-12 medium-6 columns">
-      <img src="assets/images/Project 4.JPG" alt="">
+      <img src="assets/images/Project 4.jpg" alt="">
     </div>
     <div class="small-12 medium-5 medium-offset-1 columns">
       <div class="details details-ftm">
